# house-price-predictor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile
.devcontainer/: Dockerfile  devcontainer.json
src/: aws.rs  data.rs  lib.rs  main.rs  model.rs
