[package]
name = "house-price-predictor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
polars = { version = "0.37.0", features = ["csv", "ndarray"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking"] }
xgboost = "=0.1.4"


[build-dependencies]
bindgen = "0.36.1"
